Ajout de 2 commandes : add/remove, pour permettre aux chefs d'entreprises d'ajouter leur employés à l'intranet

--- a/Phenix/config.json
+++ b/Phenix/config.json
@@ -1,6 +1,7 @@
 {
   "guildID": "1365541243941031986",
   "clientID": "1360465119871635507",
+  "devID": "268708317306683392",
   "apiPort": 5000,
   "roles": {
     "visiteur": "1365544463564279938",
@@ -12,6 +13,40 @@
       "Street Race" : "1365771071562715157",
       "F1" : "1365771108376252557",
       "Truck" : "1365771134691315752"
+    }
+  },
+  "direction": {
+    "1366223084222283818": {
+      "id": "1365769885849878608",
+      "name": "LSMS"
+    },
+    "1366223131517390969": {
+      "id": "1365769906699763822",
+      "name": "Benny's"
+    },
+    "1366223130611421305": {
+      "id": "1365769922646507652",
+      "name": "L'Or"
+    },
+    "1366223130153979994": {
+      "id": "1365769937775493282",
+      "name": "LSPD"
+    },
+    "1366223129684480170": {
+      "id": "1365769982612340766",
+      "name": "Mairie"
+    },
+    "1366223127142727730": {
+      "id": "1365770014564815048",
+      "name": "RGB"
+    },
+    "1366223297242595359": {
+      "id": "1365770059963695164",
+      "name": "Gruppe 6"
+    },
+    "1366223296626167870": {
+      "id": "1365770092834717766",
+      "name": "Weazel News"
     }
   }
 }
