--- a/Phenix/config.json
+++ b/Phenix/config.json
@@ -46,6 +46,10 @@
       "1366223296626167870": {
         "id": "1365770092834717766",
         "name": "Weazel News"
+      },
+      "1366549532745269480": {
+        "id": "1366549524176175144",
+        "name": "Arc"
       }
     }
   }
